--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ website/vendor
 # Test exclusions
 !command/test-fixtures/**/*.tfstate
 !command/test-fixtures/**/.terraform/
+internal/provider/default.ipam.json
 
 # Keep windows files with windows line endings
 *.winfile eol=crlf
