--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,6 +42,7 @@ jobs:
         with:
           go-version-file: 'go.mod'
           cache: true
+      - run: apt install terraform
       - run: go generate ./...
       - name: git diff
         run: |
